[tool.poetry]
name = "project-starters"
version = "0.1.0"
description = ""
authors = ["Somraj Saha <31373860+Jarmos-san@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.291"
black = "^24.3.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["D", "E", "F", "I", "RUF"]
ignore = ["D211", "D212"]
extend-exclude = ["__init__.py"]
